--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "stylelint-config-standard": "^26.0.0"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "fathom-client": "^3.5.0",
     "framer-motion": "^7.1.0",
     "mdx-bundler": "^9.0.1",
