--- a/package.json
+++ b/package.json
@@ -45,7 +45,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.146.0",
-    "three-stdlib": "^2.18.1"
+    "three-stdlib": "^2.18.1",
+    "@aws-sdk/client-ses": "^3.145.0",
+    "cors": "^2.8.5",
+    "dompurify": "^2.3.10",
+    "express": "^4.18.1",
+    "helmet": "^5.1.1",
+    "jsdom": "^20.0.0",
+    "serverless-http": "^3.0.2"
   },
   "scripts": {
     "dev": "next dev",
