--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "Portfolio site for Raj Singh",
-  "author": "Raj Singh <jainmayank2509@gmail.com>",
+  "author": "Raj Singh <rajgurshersingh@gmail.com>",
   "devDependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
     "@storybook/addon-a11y": "^6.5.10",
